spacing issue

--- a/components/hero/Hero.module.css
+++ b/components/hero/Hero.module.css
@@ -23,7 +23,7 @@
     margin-bottom: 2rem;
     text-align: center;
     font-weight: 900;
-    margin-inline: -2.3rem;
+    margin-inline: -1rem;
 }
 
 .hero__subtitle {
